--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- description -->
     <section class=" description left-top container ">
-        <div class=" sphoto w3 col-center">
+        <div class=" sphoto col-center">
             <img class=" center " src="./images/Subrata.jpg" alt="SUBRATA">
             <div class="between ">
                 MAIL ME : suvrotannu22@gmail.com
