--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta designer = "Shashanka biswas">
-    <meta coder = "Shashanka biswas">
+    <meta designer="Shashanka biswas">
+    <meta coder="Shashanka biswas">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title></title>
@@ -34,10 +34,7 @@
         <div class=" sphoto col-center">
             <img class=" center " src="./images/Subrata.jpg" alt="SUBRATA">
             <div class="between ">
-                MAIL ME : suvrotannu22@gmail.com
-            </div>
-            <div class="between ">
-                <a href="https://www.facebook.com/subratamondal.tanu/" class="nav-link"><i class="fab fa-facebook-square"></i></a>
+                <a href="#" class="nav-link"><i class="fab fa-facebook-square"></i></a>
                 <a href="#" class="nav-link"><i class="fab fa-youtube-square"></i></a>
                 <a href="#" class="nav-link"><i class="fab fa-dribbble-square"></i></a>
                 <a href="#" class="nav-link"><i class="fab fa-twitter-square"></i></a>
@@ -48,13 +45,17 @@
             <h1>WELLCOME to</h1>
             <h2>SUBRATA's WORLD</h2>
             <h3>Are you searching for.......</h3>
-            <div class="skills between">
-                <div class="skill1 center">Photo <br> Editor</div>
-                <div class="skill2 center">Banner <br> Designer</div>
-                <div class="skill3 center">Business Card <br> Designer</div>
-                <div class="skill4 center">Digital <br> marketer</div>
+            <div class="skills w100 between">
+                <div class="skill1 center"><a
+                        href="https://www.fiverr.com/ktsmacademy/remove-50-background-within-24-hours?context_referrer=user_page&ref_ctx_id=37d9304ba36dc9298ec6a67308526cf4&pckg_id=1&pos=4">
+                        Photo <br> Editor </a></div>
+                <div class="skill2 center"><a href="https://www.fiverr.com/ktsmacademy/design-web-banner-you-tube-banner-slider-or-banner?context_referrer=user_page&ref_ctx_id=37d9304ba36dc9298ec6a67308526cf4&pckg_id=1&pos=2"> Banner <br> Designer</a></div>
+                <div class="skill3 center"><a href="https://www.fiverr.com/ktsmacademy/do-professional-business-card-design?context_referrer=user_page&ref_ctx_id=37d9304ba36dc9298ec6a67308526cf4&pckg_id=1&pos=1"> Business Card <br> Designer</a></div>
+                <div class="skill4 center"><a href=""> Digital <br> marketer</a></div>
+                <div class="skill5 center"><a href="https://www.fiverr.com/ktsmacademy/develop-a-chatbot-for-your-fb-pages-and-websites?context_referrer=user_page&ref_ctx_id=37d9304ba36dc9298ec6a67308526cf4&pckg_id=1&pos=6"> Chat<br>Boat</a></div>
             </div>
-            <p>I'm a passionate graphic designer and digital marketer with more than 3 years of experience. I love
+            <p class=" w100">I'm a passionate graphic designer and digital marketer with more than 3 years of
+                experience. I love
                 designing and creating new things as well as marketing a lot. I have been worked for many other clients
                 all over the world. I can do:----------- ►Google ads;►Youtube ads;►Keyword research;►Lead
                 generation;►Business Card Design;►Branding Design; ►Letterhead Design;►Email Signature Design;
@@ -132,7 +133,7 @@
             <div class="footer-nav left-top-col">
                 <img class="w100" src="./images/Subrata.jpg" alt="Subrata">
                 <div class="between w100">
-                    <a href="https://www.facebook.com/subratamondal.tanu/" class="nav-link"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#" class="nav-link"><i class="fab fa-facebook-square"></i></a>
                     <a href="#" class="nav-link"><i class="fab fa-youtube-square"></i></a>
                     <a href="#" class="nav-link"><i class="fab fa-dribbble-square"></i></a>
                     <a href="#" class="nav-link"><i class="fab fa-twitter-square"></i></a>
